# itmo_python

./: main.py  pyproject.toml
hw_01/: default_list.py  pyproject.toml
hw_01/nl_util/: __main__.py
hw_02/: STUDENT.md  decorators.py  pipeline.py
hw_02/dtsyplyackov_pydecorators/: README.md  pyproject.toml
hw_02/dtsyplyackov_pydecorators/src/dtsyplyackov_pydecorators/: __init__.py  core.py
hw_03/: collision_demo.py  descriptors.py  matrix.py
