[project]
name = "nl-util"
version = "0.1.0"
description = "Утилита nl — нумерация строк файла"
authors = [
    { name = "Daniil Tsyplyackov" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
nl-util = "nl_util.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
